# amazon-orders-to-transactions

./: .gitignore  README.md  main.py  pyproject.toml
design/: plan.md
design/features/: returns.md
src/: config.py  data_processor.py
tests/: test_data_processor.py
